@@ -38,7 +38,7 @@ class Tx_AdGoogleMaps_JsonClassEncoder_PropertyProcessor_QuoteValue extends Tx_A
 	 * @param string $propertyType
 	 * @param string $propertyName
 	 * @param mixed $propertyValue
-	 * @return string
+	 * @return mixed
 	 */
 	public function getPropertyValue($optionValue, $object, $propertyType, $propertyName, $propertyValue) {
 		if ($this->getBooleanValue($optionValue) === TRUE) {
